# pyitm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  area.csv  p2p.csv  pfls.csv  pyproject.toml
.github/workflows/: ci.yml
documentation/: add-antenna-gain.md  functions.md  other-add-ons.md  quick-guide.md  todo.md
documentation/code-review/: 01-code-review.md  02-verification.md  03-code-review.md
documentation/fixes/: 01-fixes.md  02-fixes.md
documentation/plans/: 01-python-port-plan.md
itm/: __init__.py  _constants.py  itm.py  models.py  propagation.py  terrain.py  variability.py
tests/: test_area.py  test_itm.py  test_models.py  test_p2p.py  test_propagation.py  test_terrain.py  test_variability.py
