[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "itm"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.package-data]
itm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
